fixed Button component to wrap text, designed voting page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 html, body {
   background-color: #222222;
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 a {
